# IDMR

./: .gitignore  CLIrunner.py  MLE DMR.ipynb  PB-CLIrunner.py  PB.py  PBmain.py  PLAN-01-18-2025.md  README.md  Read Me.md  SizeEstimation.py  classesv2.py  debug.ipynb  notebook-runner-DMR.ipynb  output.txt  pyproject.toml  raw_output.txt  sil.py  tableExtender3.py  tableMaker.py  tableMaker2.py
idmr_core/: __init__.py  data.py  models.py  simulation.py
notes/: AWS-cheat-sheet.md  IDC-paper.md  IDC_To do list (1).md
results/aggregated/: table1_summary.csv
results/table1/: dgp_A_d_1000_S_10_init_pairwise.csv  dgp_A_d_1000_S_20_init_pairwise.csv  dgp_A_d_2000_S_10_init_pairwise.csv  dgp_A_d_2000_S_20_init_pairwise.csv  dgp_A_d_250_S_10_init_pairwise.csv  dgp_A_d_250_S_20_init_pairwise.csv  dgp_A_d_5000_S_10_init_pairwise.csv  dgp_A_d_5000_S_20_init_pairwise.csv  dgp_A_d_500_S_10_init_pairwise.csv  dgp_A_d_500_S_20_init_pairwise.csv  dgp_C_d_1000_S_10.csv  dgp_C_d_1000_S_20.csv  dgp_C_d_2000_S_10.csv  dgp_C_d_2000_S_20.csv  dgp_C_d_250_S_10.csv  dgp_C_d_250_S_20.csv  dgp_C_d_5000_S_10.csv  dgp_C_d_5000_S_20.csv  dgp_C_d_500_S_10.csv  dgp_C_d_500_S_20.csv
scripts/: aggregate_results.py  aws_setup.sh  fetch_yelp_recruiting.sh  launch_experiments.sh  make_yelp_subset_for_idmr.py  process_yelp_taddy.py  run_experiments.py  run_idc_on_yelp_subset.py  sanity_idc_vs_mle.py  verify_refactor.py  verify_yelp_recruiting_download.py
tests/: __init__.py  test_idmr_core.py
